Updated MOTD Updated noemnclature supported and added another carbohydrate example Specified source encoding

--- a/src/main/webapp/information.html
+++ b/src/main/webapp/information.html
@@ -183,9 +183,13 @@ table#supported-nomenclature td {
   </tr>
   <tr>
     <td>Radicofunctional nomenclature</td>
-    <td>amides, anhydrides, esters, diesters, glycols, acids, azides, bromides, chlorides, cyanates, cyanides, fluorides, fulminates, hydrazones, hydroperoxides, imides,
-iodides, isocyanates, isocyanides, isoselenocyanates, isothiocyanates, selenocyanates, thiocyanates, alcohols, selenols, thiols, ethers, ketones, oxides, oximes, peroxides, selenides,
-selenones, selenoxides, selones, selenoketones, selenosemicarbazone, semicarbazones, sulfides, sulfones, sulfoxides, tellurides, telluroketones, tellurosemicarbazones, tellurones, telluroxides, thioketones and thiosemicarbazones</td>
+    <td>acids, acetals, alcohols, amides, anhydrides, azides, bromides, chlorides, cyanates, cyanides,
+esters, di/tri/tetra esters, ethers, fluorides, fulminates, glycols, glycol ethers, hemiacetals, hemiketal, hydrazones, hydroperoxides,
+hydrazides, imides, iodides, isocyanates, isocyanides, isoselenocyanates, isothiocyanates, ketals, ketones, lactams, lactims,
+lactones, selenocyanates, thiocyanates, selenols, thiols, mercaptans, oxides, oximes, peroxides, selenides, selenones, selenoxides,
+selones, selenoketones, selenosemicarbazones, semicarbazones, sulfides, sulfones, sulfoxides, sultams, sultims, sultines, sultones,
+tellurides, telluroketones, tellurosemicarbazones, tellurones, telluroxides, thioketones and thiosemicarbazones
+		</td>
   </tr>
   <tr>
     <td>Amino Acids and derivatives</td>
@@ -207,9 +211,15 @@ selenones, selenoxides, selones, selenoketones, selenosemicarbazone, semicarbazo
 		</td>
   </tr>
   <tr>
-    <td>Open-chain saccharides</td>
+    <td>Open-chain monosaccharides</td>
     <td>
 				<a href="opsin/4-amino-4%2C6-dideoxy-3-C-methyl-2-O-methyl-L-mannose.png">4-amino-4,6-dideoxy-3-C-methyl-2-O-methyl-L-mannose</a>
+		</td>
+  </tr>
+  <tr>
+    <td>Simple cyclised monosaccharides</td>
+    <td>
+				<a href="opsin/%CE%B2-D-ribofuranose.png">β-D-ribofuranose</a>
 		</td>
   </tr>
   <tr>
