--- a/src/main/webapp/error.html
+++ b/src/main/webapp/error.html
@@ -36,7 +36,7 @@
 	<p>OPSIN has failed to process the following request: %INPUT%</p>
   <p>The reason given for this failure by OPSIN is as follows:</p>
   <h3>%ERRORMESSAGE%</h3>
-  <p>If you think this is a bug please get in <a href="mailto:dl387@cam.ac.uk">touch</a>!</p>
+  <p>If you think this is a bug please get in <a href="mailto:daniel@nextmovesoftware.com">touch</a>!</p>
   <p>The server returned a %ERRORCODE% error code. For more information on the meaning of this error code see <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html#sec10.4.5">here</a>.</p>
 	<p>Return to <a href="/">home page</a>.</p>
 </div>
@@ -63,7 +63,7 @@
 <!-- end of #content -->
 
 <ul id="site-info">
-  <li class="copy">&copy; 2009-2012 <a href="mailto:dl387@cam.ac.uk">Daniel Lowe</a>, Unilever Centre for Molecular Science Informatics</li>
+  <li class="copy">&copy; 2009-2012 <a href="mailto:daniel@nextmovesoftware.com">Daniel Lowe</a>, Unilever Centre for Molecular Science Informatics</li>
   <li class="link last"><a href="http://www.ch.cam.ac.uk/privacy.html">Privacy</a></li>
   <li class="link"><a href="http://www.cam.ac.uk/site/">Accessibility</a></li>
 </ul>
