--- a/src/main/webapp/getinvolved.html
+++ b/src/main/webapp/getinvolved.html
@@ -39,7 +39,7 @@
     <li>Adding more nomenclature</li>
     <li>Adding more vocabulary (specifically structures from which derivatives can be named e.g. <a href="http://www.chem.qmul.ac.uk/iupac/sectionF/app.html">these</a>)</li>
   </ul>
-  <p>If you have questions about the project or would like to help out please get in <a href="mailto:dl387@cam.ac.uk">touch</a>!</p>
+  <p>If you have questions about the project or would like to help out please get in <a href="mailto:daniel@nextmovesoftware.com">touch</a>!</p>
 </div>
 
 </div>
@@ -64,7 +64,7 @@
 <!-- end of #content -->
 
 <ul id="site-info">
-  <li class="copy">&copy; 2009-2012 <a href="mailto:dl387@cam.ac.uk">Daniel Lowe</a>, Unilever Centre for Molecular Science Informatics</li>
+  <li class="copy">&copy; 2009-2012 <a href="mailto:daniel@nextmovesoftware.com">Daniel Lowe</a>, Unilever Centre for Molecular Science Informatics</li>
   <li class="link last"><a href="http://www.ch.cam.ac.uk/privacy.html">Privacy</a></li>
   <li class="link"><a href="http://www.cam.ac.uk/site/">Accessibility</a></li>
 </ul>
