--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 <!-- change title and metadata for each page here -->
 <link rel="stylesheet" href="opsin.css" type="text/css" media="all" />
 <title>OPSIN: Open Parser for Systematic IUPAC Nomenclature</title>
-<script src="jquery-1.5.1.min.js" type="text/javascript"></script>
+<script src="jquery-1.10.2.min.js" type="text/javascript"></script>
 <script src="opsin.js" type="text/javascript"></script>
 <style type="text/css" media="all">
   div#content-primary img#depiction {
@@ -56,7 +56,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 9/1/14: Due to a memory upgrade this web service should now be substantially faster</span><br/>A paper describing OPSIN is now available from <a href="http://pubs.acs.org/doi/full/10.1021/ci100384d">JCIM</a>. If you have found OPSIN useful in your work citing it would be very much appreciated.<br/> Depiction courtesy of the <a href="http://ggasoftware.com/opensource/indigo">Indigo Toolkit</a></p>
+  <p><span id="last-update">Updated 14/1/14: Jquery update to fix bug with Google Chrome</span><br/>A paper describing OPSIN is now available from <a href="http://pubs.acs.org/doi/full/10.1021/ci100384d">JCIM</a>. If you have found OPSIN useful in your work citing it would be very much appreciated.<br/> Depiction courtesy of the <a href="http://ggasoftware.com/opensource/indigo">Indigo Toolkit</a></p>
   <div id="results" style="display:none">
     <p><img id="depiction" src="" alt="" /></p>
     <h3>InChI:</h3>
