--- a/src/main/webapp/error.html
+++ b/src/main/webapp/error.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="../global/style/layout.css" type="text/css" media="all" />
 <link rel="stylesheet" href="../global/style/print.css" type="text/css" media="print" />
-<link rel="Shortcut Icon" href="http://www.cam.ac.uk/templates/favicon.ico" />
+<link rel="Shortcut Icon" href="http://www.ch.cam.ac.uk/newsites/all/themes/ucam/favicon.ico" />
 <!--[if IE 6]><link rel="stylesheet" href="../global/style/ie6.css" type="text/css" media="screen" /><script type="text/javascript" src="../global/js/minmax.js"></script><![endif]-->
 <!--[if IE 7]><link rel="stylesheet" href="../global/style/ie7.css" type="text/css" media="screen" /><![endif]-->
 <!-- change title and metadata for each page here -->
