--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,6 +26,14 @@
   span#last-update {
     font-weight: bold; 
   }
+  h3 {
+    font-size:0.9em;
+  }
+  div#opsininstructions {
+    font-weight: bold;
+    text-align: center;
+  }
+
 </style>
 </head>
 <body class="home">
@@ -49,14 +57,17 @@
 </ul>
 
 <div style="min-height: 360px">
-  <h3>Enter a chemical name into the box and then click submit. If the name can be interpreted, a depiction, a SMILES string, its InChI and its CML will be returned.</h3>
   <form action="" id="chemicalNameForm">
     <fieldset>
       <input type="text" id="chemicalName" size="100" value="2,4,6-trinitrotoluene" />
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 14/1/14: Jquery update to fix bug with Google Chrome</span><br/>A paper describing OPSIN is now available from <a href="http://pubs.acs.org/doi/full/10.1021/ci100384d">JCIM</a>. If you have found OPSIN useful in your work citing it would be very much appreciated.<br/> Depiction courtesy of the <a href="http://ggasoftware.com/opensource/indigo">Indigo Toolkit</a></p>
+  <p><span id="last-update">Updated 19/4/14: InChI keys are now generated</span><br/>If you have found OPSIN useful in your work citing our <a href="http://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="http://ggasoftware.com/opensource/indigo">Indigo Toolkit</a></p>
+  <div id="opsininstructions">
+    <p>Enter a chemical name into the box and then click submit.<br />
+       The chemical structure described by the name, or why it could not be interpreted, will appear here.</p>
+  </div>
   <div id="results" style="display:none">
     <p><img id="depiction" src="" alt="" /></p>
     <h3>InChI:</h3>
@@ -66,7 +77,6 @@
     <h3>CML:</h3>
     <pre id="cml"></pre>
   </div>
-
 </div>
 
 </div>
